[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
dirs = "4.0.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
serde_millis = "0.1.1"